# steam-library-exporter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  steam_export.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
